--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/Circular Personal Image2.png" alt="Matias profile picture"></td>
+            <td><img src="images/Circular-Personal-Image2.png" alt="Matias profile picture"></td>
             <td>
             <h1> Matías Coloma </h1>
              <p><em>CEO of <strong> <a href="https://www.shopify.com">Shoppify</a></strong></em></p> 
